Code cleanup 1. Re-arranged codes 2. Abstract module frame work 3. classify sofware/hardware/service components

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,5 +8,6 @@ idf_component_register(SRCS "main.c"
                             "mode.c"
                             "util.c"
                             "ttl.c"
+                            "module.c"
                        INCLUDE_DIRS ".")
 target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
