--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,5 +9,16 @@ idf_component_register(SRCS "main.c"
                             "util.c"
                             "ttl.c"
                             "module.c"
+                            "rest_server.c"
                        INCLUDE_DIRS ".")
+
+if(CONFIG_EXAMPLE_WEB_DEPLOY_SF)
+    set(WEB_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../front/web-demo")
+    if(EXISTS ${WEB_SRC_DIR}/dist)
+        spiffs_create_partition_image(www ${WEB_SRC_DIR}/dist FLASH_IN_PROJECT)
+    else()
+        message(FATAL_ERROR "${WEB_SRC_DIR}/dist doesn't exit. Please run 'npm run build' in ${WEB_SRC_DIR}")
+    endif()
+endif()
+
 target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
