[#1] UDP server & BT SPP for MSPv2 and cli passthough

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -13,6 +13,8 @@ idf_component_register(SRCS "main.c"
                             "udp_server.c"
                             "udp_client.c"
                             "spiffs.c"
+                            "tello_protocol.c"
+                            "msp_protocol.c"
                        INCLUDE_DIRS ".")
 
 if(CONFIG_RESTFUL_WEB_DEPLOY_SF)
