--- a/components/protocol_common/CMakeLists.txt
+++ b/components/protocol_common/CMakeLists.txt
@@ -1,16 +1,5 @@
 set(srcs "stdin_out.c"
-         "addr_from_stdin.c"
-         "connect.c"
-         "wifi_connect.c")
-
-if(CONFIG_EXAMPLE_PROVIDE_WIFI_CONSOLE_CMD)
-    list(APPEND srcs "console_cmd.c")
-endif()
-
-if(CONFIG_EXAMPLE_CONNECT_ETHERNET)
-    list(APPEND srcs "eth_connect.c")
-endif()
-
+         "addr_from_stdin.c")
 
 idf_component_register(SRCS "${srcs}"
                        INCLUDE_DIRS "include"
