[#38] clean storage partition when burn the flash

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -28,4 +28,25 @@ if(CONFIG_RESTFUL_WEB_DEPLOY_SF)
     endif()
 endif()
 
+set(STORAGE_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../build/storage")
+if(EXISTS ${STORAGE_SRC_DIR})
+	spiffs_create_partition_image(storage ${STORAGE_SRC_DIR} FLASH_IN_PROJECT)
+else()
+	message(FATAL_ERROR "${STORAGE_SRC_DIR} doesn't exit. Please check in ${STORAGE_SRC_DIR}")
+endif()
+
+set(NVS_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../build/nvs")
+if(EXISTS ${NVS_SRC_DIR})
+	spiffs_create_partition_image(nvs ${NVS_SRC_DIR} FLASH_IN_PROJECT)
+else()
+	message(FATAL_ERROR "${NVS_SRC_DIR} doesn't exit. Please check in ${NVS_SRC_DIR}")
+endif()
+
+set(PHY_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../build/phy_init")
+if(EXISTS ${PHY_SRC_DIR})
+	spiffs_create_partition_image(phy_init ${PHY_SRC_DIR} FLASH_IN_PROJECT)
+else()
+	message(FATAL_ERROR "${PHY_SRC_DIR} doesn't exit. Please check in ${PHY_SRC_DIR}")
+endif()
+
 target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
