--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -14,6 +14,7 @@ idf_component_register(SRCS "main.c"
                             "udp_client.c"
                             "spiffs.c"
                             "tello_protocol.c"
+                            "hy_protocol.c"
                             "msp_protocol.c"
                             "console.c"
                             "factory_setting.c"
